# File-Backup-System

./: .gitignore  CMakeLists.txt  README.md  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  release.sh  server_run.cpp  signwindow.cpp  signwindow.h  signwindow.ui
.github/workflows/: cmake.yml
core/: CMakeLists.txt  README.md  core.cpp  core.h  core.hpp  duplicator.cpp  duplicator.hpp  export.hpp  filter.cpp  filter.hpp  generator.cpp  generator.hpp  hashlist.cpp  hashlist.hpp  localgenerator.cpp  localgenerator.hpp  setter.cpp  setter.hpp
docs/: README.md
extensions/: CMakeLists.txt  README.md  code_crypt.cpp  code_crypt.hpp  crypt.cpp  crypt.h  extensions.cpp  extensions.h  extensions.hpp  listen_file_change.cpp  listen_file_change.hpp  map_file.cpp  map_file.hpp  placeholder.cpp  test_listen.cpp
local/: localgenerator.hpp
net/: CMakeLists.txt  account.h  client.cpp  client.hpp  fileid.hpp  netbase.cpp  netbase.hpp  server.cpp  server.hpp  service.cpp  service.hpp  socket.cpp  socket.hpp  threadspool.cpp  threadspool.hpp
res/: CMakeLists.txt  FBS.desktop
test/: CMakeLists.txt  README.md  copyfile.cpp  main.cpp
